# mario-kart-casio

./: .clangd  .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PCMakefile  cmake_install.cmake  colour_test.py  compile_commands.json  convert.c  credits.txt  emscripten.html  generated_lut.cpp  hello-world.g3a  json-fixup.py  kartsprites.cpp  kartsprites2.cpp  main.cpp.old  mario-kart-noopt.g3a  mario-kart.g3a  native-bin  rleTest.py  run.py  track.cpp  track.json
.cache/clangd/index/: 3d.c.B25E87FFF83279C2.idx  3d.h.BDA760B5AF64E463.idx  buttons.c.AA168E02D3C2A5FF.idx  buttons.h.C34AB84233C86DB7.idx  debugHud.c.0DE3E78CA9EE118E.idx  debugHud.h.0800CD4A6FA4F7FE.idx  generated_lut.h.1DD0AB6BB7578326.idx  gint.c.DBBFBFBFAD122397.idx  gint.h.78C3B1682C8D64FA.idx  images.c.1F8B0361A7E35E9A.idx  images.c.803F23E219B7455D.idx  images.h.DD686E5C6087DA5C.idx  main.c.874A7ADD6DB57FC3.idx  main.h.6BFA7F5622972D20.idx  maths.c.9DF20CA4865372FD.idx  maths.h.2D983B08F611D087.idx  particles.c.04E6BAF9E21F2C26.idx  particles.h.BFFF4739C5D97DC6.idx  physics.c.BEC7150A4956B853.idx  physics.h.B9A4C82159624FE8.idx  platform.c.CCD21C94FAA9A428.idx  platform.h.23938D2965748EFE.idx  sprites.c.D3E6EB9072E5184B.idx  sprites.h.39AA44A0FCA3CA1A.idx  state.c.38363B0A396C289D.idx  state.h.25FD4037DD824937.idx  tilemap.c.6EAE01AA5F3D4FEC.idx  tilemap.h.DE543ECEEBE1CCC3.idx  track.h.1C97A1FB34485483.idx
.cmake/api/v1/reply/: cache-v2-090f13c229a843ec3c77.json  cmakeFiles-v1-5c368505a9e5b5457aac.json  codemodel-v2-b7ef37ab22d4355f78bd.json  index-2022-07-05T14-43-38-0198.json
Release/Content/: count.py  reconstruct.py
Release/Content/getattrib/: getattrib.py  offsets.csv
Release/Content/peach/: behaviour.txt  read.py  reconstruct.py  track.h
assets-cg/: fxconv-metadata.txt
assets/img/: shadow.ora  skygarden_bg.png.old  tree.ora
assets/track/peach_circuit/: tileset.png.old
assets/track/peach_circuit/tiles/: merge.py  palette.json  palette.pal
build-em/: CMakeCache.txt  Makefile  cmake_install.cmake  mariokart.html  mariokart.js  mariokart.wasm
data/: generated_lut.h
data-headers/: compressedTrack.h  compressedTrack.h.old-sunset  generated_lut.h  images-fxconv.c  images-fxconv.h  images.c  images.h  track.c  track.h  track_old.h
fxcg-mock/include/fxcg/: display.c  keyboard.c  mock.c  mock.h  system.c
native/: main
native/fxcg/: display.c  display.h  keyboard.c  keyboard.h
scripts/: img2c.py  img2fxconv.py  img2header.py  imgkart-compress.py  sizeAnalyser.py  track2c.py
src/: 3d-bg-dat.h  3d.c  3d.h  buttons.c  buttons.h  configurableConstants.c  configurableConstants.h  data.c  data.h  debugHud.c  debugHud.h  graphics.c  images.c  lookup_gen_config.yaml  main.c  main.cpp  main.h  maths.c  maths.h  miniz.h  particles.c  particles.h  physics.c  physics.h  platform.h  recording.c  sprites.c  sprites.h  state.c  state.h  test.c  tilemap.S  tilemap.c  tilemap.h
temp/: test.py
test/: include.cpp  one.h  optim_test.cpp  test.cpp  test.h
